--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.37.1",
+    "firebase": "^10.12.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -21,7 +22,9 @@
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
+    "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.3"
   },
